Initial commit of DaTock Flask website

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
+    <meta name="google-site-verification" content="kQrJ1QnEhZboNdX-i4orgg7WKkCUvut1Ue1eQPfiZWU" />
     <meta name="description" content="DaTock.com - Premier Data Science Solutions. Advanced predictive analytics, machine learning, AI model training, and strategic business intelligence for local businesses.">
     <meta name="keywords" content="data science, predictive analytics, machine learning, AI, business intelligence, data visualization, forecasting, strategic marketing, Pakistan data science">
     <meta name="author" content="DaTock.com">
